env added to git ignore + ui file changed

--- a/assets/templates/cryptor.ui
+++ b/assets/templates/cryptor.ui
@@ -59,6 +59,9 @@
           <property name="text">
            <string/>
           </property>
+          <property name="icon">
+           <iconset theme="address-book-new"/>
+          </property>
          </widget>
         </item>
         <item>
